-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.0.0
-
None
-
c3ae1c76f349bac2e262929d29163cd9b5d60332
QSqlTableModel::selectRow() does not work with primary keys supplied by the database, as for example in AUTOINCREMENT, due to generating a WHERE primaryKey = NULL clause, because the value of the primary key is not available.
See also http://lists.qt-project.org/pipermail/development/2012-September/006261.html